tools update on boot
